<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_drawer_login" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/nav_drawer_logout"/>

    <item
        android:id="@+id/nav_clear_cache"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:title="@string/nav_drawer_clear_cache"/>

    <item android:title="@string/nav_drawer_about">
        <menu>
            <item
                android:id="@+id/nav_wk_forum"
                android:icon="@drawable/ic_tag_faces_black_24dp"
                android:title="@string/nav_drawer_wk_forum"/>
            <item
                android:id="@+id/nav_github"
                android:icon="@mipmap/ic_github_32px"
                android:title="@string/nav_drawer_github"/>
        </menu>
    </item>

</menu>
